platform/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: keycloak
          image: registry.hacwa.co.uk/hacwa/image-public/keycloak:0.1.0
          imagePullPolicy: IfNotPresent
          args:
            - start
            - --optimized
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 3Gi
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: http
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 5
